# biohackathon_ontogan

./: .gitignore  README.md  create_owl_dataset.py  example.py  pyproject.toml  test.csv
data/: icd_do.pkl  icd_omim.pkl
onto_cgan/: README.md
onto_cgan/cGAN/: base.py  data_sampler.py  data_transformer.py  example.py  onto_cgan_init.py
onto_cgan/cGAN/synthesizers/: __init__.py  dp_cgan.py  example.py
onto_cgan/ontology_embeddings/: generate_embeddings.py
paper/: paper.md
src/: README.md  mapping.py
src/cGAN/: __init__.py  dp_cgan_init.py  example.py
src/cGAN/synthesizers/: __init__.py  dp_cgan.py  example.py
src/dp_cgans/: dp_cgan_init.py  example.py  generator.pkl  loss_output_10.txt  syn_data_file.csv
src/dp_cgans/synthesizers/: dp_cgan.py
src/ontology_embeddings/: EmbeddingModules.py  opa2vec.py  owl2vec.py
